--- a/www_root/dashboard/css/common.css
+++ b/www_root/dashboard/css/common.css
@@ -1,3 +1,28 @@
+@font-face{
+    font-family: 'Lato';
+    src: url("../font/Lato/Lato-Regular.ttf") format("truetype");
+}
+@font-face{
+    font-family: 'Lato';
+    src: url("../font/Lato/Lato-Bold.ttf") format("truetype");
+    font-weight: bold;
+}
+@font-face{
+    font-family: 'Lato';
+    src: url("../font/Lato/Lato-Black.ttf") format("truetype");
+    font-weight: bolder;
+}
+@font-face{
+    font-family: 'Merriweather';
+    src: url("../font/Merriweather/Merriweather-Light.ttf") format("truetype");
+    font-weight: lighter;
+}
+@font-face{
+    font-family: 'Merriweather';
+    src: url("../font/Merriweather/Merriweather-Regular.ttf") format("truetype");
+    /* font-weight: bold; */
+}
+
 body{
     display: grid;
     width: 1480px;
@@ -9,6 +34,7 @@ body{
         "left header header"
         "left center right"
         "left center right";
+    font-family: Lato, sans-serif;
 }
 header{
     grid-area: header;
@@ -32,36 +58,39 @@ header{
 .profile__img--profile{
     width: 29px;
     height: 28px;
-    background-color: #eee;
     float: left;
     margin: 16px 16px 0 34px;
 }
 .profile__span{
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
-    letter-spacing: 0.9px;
-    line-height: 60px;
+    letter-spacing: 1.3px;
+    line-height: 28px;
     color: #aeaeae;
-    float: left
+    float: left;
+    padding-right: 23px;
+    margin: 16px 0;
+    border-right: 2px solid #ebebeb;
 }
 .profile__img--box{
     width: 22px;
     height: 22px;
     float: right;
     margin: 20px 26px 0 0;
-    background-color: #eee;
 }
 .profile__img--alarm{
     width: 18px;
     height: 22px;
     float: right;
     margin: 20px 27px 0 0;
-    background-color: #eee;
 }  
 /* end of header */
 .left-navbar{
     grid-area: left;
     background-color: #0e1214;
+    font-size: 13px;
+    font-weight: bolder;
+    letter-spacing: 1.3px;
 }
 .logo{
     height: 120px;
@@ -71,56 +100,67 @@ header{
 .logo__img{
     width: 62px;
     height: 65px;
-    background-color: #fff;
     margin: 30px 99px 26px 104px;
 }
 .nav-items{
     height: 50px;
     background-color: #191e23;
     border-bottom: 1px solid #0e1214;
+    position: relative;
 }
 .nav-items__img{
     width: 16px;
-    height: 16px;
     float: left;
-    background-color: rgba(189, 213, 237, 0.41);
-    margin: 17px 21px 17px 38px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 40px;
 }
 .nav-items__span{
+    margin-left: 75px;
     line-height: 50px;
-    font-size: 13px;
-    font-weight: bold;
     color: rgba(189, 213, 237, 0.41);
-    letter-spacing: 1.3px;
 }
 .nav-items--selected{
     background-color: #3bb4bc;
+    position: relative;
+}
+.nav-itmes--selected-highright{
+    width: 6px;
+    height: 50px;
+    float: left;
+    background-color: #329ea5;
 }
 .nav-items--selected__img{
     width: 16px;
     height: 16px;
-    float: left;
-    margin: 17px 21px 17px 38px;
-    color: #ffffff;
+    position: absolute;
+    top: 25px;
+    transform: translateY(-50%);
+    left: 40px;
 }
 .nav-items--selected__span{
+    margin-left: 69px;
     line-height: 50px;
-    font-size: 13px;
-    font-weight: bold;
     color: #ffffff;
-    letter-spacing: 1.3px;
+    display: inline-block;
+    height: 50px;
 }
 .nav-items-dropdown{
     background-color: #0e1214;
     height: 50px;
+    position: relative;
 }
 .nav-items-dropdown__span{
-    font-size: 13px;
-    font-weight: bold;
-    letter-spacing: 1.3px;
     color: rgba(114, 136, 154, 0.41);
     line-height: 50px;
     margin-left: 40px;
+}
+.nav-items-dropdown__img{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 34px;
 }
 /* end of navbar*/
 .main-contents{
@@ -129,6 +169,48 @@ header{
 .main-carousel{
     height: 340px;
     background-color: #eee;
+    position: relative;
+}
+.main-carousel__div--popup{
+    position: absolute;
+    top: 24px;
+    left: 47px;
+    width: 142px;
+    height: 36px;
+    opacity: 0.6;
+    background-color: #f63737;
+}
+.main-carousel__div--popup__span{
+    position: relative;
+    left: 18px;
+    line-height: 36px;
+    font-size: 12.5px;
+    letter-spacing: 0.7px;
+    color: #ffffff;
+}
+.main-carousel__img-button{
+    position: absolute;
+    bottom: 125px;
+    left: 46px;
+}
+.main-carousel__span-title{
+    position: absolute;
+    bottom: 76px;
+    left: 46px;
+    font-size: 25px;
+    font-weight: bold;
+    letter-spacing: 1.4px;
+    color: #ffffff;
+}
+.main-carousel__span-comment{
+    position: absolute;
+    bottom: 37px;
+    left: 46px;
+    font-family: Merriweather;
+    font-weight: lighter;
+    font-size: 18px;
+    letter-spacing: 0.5px;
+    color: rgba(255, 255, 255, 0.67);
 }
 .main-card-wrap{
     margin: 0 95px;
@@ -138,25 +220,33 @@ header{
     width: 915px;
     height: 50px;
     position: absolute;
-    background-color: #ddd;
+    background-color: rgba(255, 255, 255, 0.9);
     top: 0;
     left: -95px;
     opacity: 0.9;
     z-index: 2000;
 }
-.main-card-sort__image--one-column{
+.main-card-sort__image--list{
     width: 23px;
     height: 16px;
-    background-color: #ccc;
     margin: 17px 0 0 61px;
     float: left;
 }
-.main-card-sort__image--three-column{
+.main-card-sort__image--tiles{
     width: 23px;
     height: 16px;
-    background-color: #ccc;
     margin: 17px 0 0 28px;
     float: left;
+}
+.main-card-sort__input--sort{
+    float: right;
+    margin: 25px 66px 0 0 ;
+    border: none;
+    letter-spacing: 0.65px;
+    color: #cccccc;
+    background-color: inherit;
+    padding-right: 22px;
+    transform: translateY(-50%);
 }
 .main-card{
     width: 210px;
@@ -184,6 +274,23 @@ header{
     grid-area: right;
     background-color: #0e1214;
 }
+.right-sidebar__span-reply{
+    display: block;
+    margin: 42px 0 0 33px;
+    font-size: 14px;
+    letter-spacing: 1.6px;
+    color: #c0cccc;
+}
+.right-sidebar__span--highlight{
+    color: #3bb4bc;
+}
+.right-sidebar__span-progress{
+    display: block;
+    margin: 24px 0 0 33px;
+    font-family: Merriweather;
+    font-size: 14px;
+    color: rgba(255, 255, 255, 0.67);
+}
 .sidebar-timecard{
     height: 200px;
     background-color: #191e23;
@@ -193,12 +300,11 @@ header{
 .sidebar-timecard__img{
     width: 38px;
     height: 38px;
-    background-color: #fff;
     margin: 20px 20px 24px 36px;
     float: left;
 }
 .sidebar-timecard__span--title{
-    font-size: 16px;
+    font-size: 14px;
     font-weight: bold;
     line-height: 38px;
     letter-spacing: 1.6px;
@@ -207,7 +313,7 @@ header{
     color: #c0cccc;
 }
 .sidebar-timecard__span--time{
-    font-size: 14px;
+    font-size: 12px;
     font-weight: bold;
     line-height: 38px;
     letter-spacing: 1.4px;
@@ -216,9 +322,10 @@ header{
     margin: 20px 20px 0 0;
 }
 .sidebar-timecard__span--contents{
-    font-size: 15px;
+    font-size: 12px;
     color: #fff;
-    line-height: 1.33;
+    line-height: 20px;
     padding-top: 83px;
     margin: 0 23px 0 38px;
+    font-family: Merriweather, serif;
 }
