[2020-05-23]update(dashboard-BEM modal-top)

--- a/www_root/dashboard/css/common.css
+++ b/www_root/dashboard/css/common.css
@@ -22,6 +22,9 @@
     src: url("../font/Merriweather/Merriweather-Regular.ttf") format("truetype");
     /* font-weight: bold; */
 }
+html{
+    transition: all 0.4s;
+}
 body{
     display: grid;
     width: 1480px;
@@ -114,7 +117,7 @@ header{
 }
 .profile-dropdown-header__img{
     position: absolute;
-    top: 20px;
+    top: 28px;
     left: 14px;
 }
 .profile-dropdown-header__span{
@@ -485,4 +488,20 @@ header{
     padding-top: 83px;
     margin: 0 23px 0 38px;
     font-family: Merriweather, serif;
+}
+.modal-top{
+    line-height: 50px;
+    text-align: center;
+    font-size: 32px;
+    color: #ffffff;
+    font-weight: bolder;
+    width: 50px;
+    height: 50px;
+    background-color: #329ea5;
+    border-radius: 25px;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    z-index: 2000;
+    transition: opacity 0.4s;
 }
