--- a/www_root/dashboard/css/common.css
+++ b/www_root/dashboard/css/common.css
@@ -391,9 +391,38 @@ header{
 .main-card:nth-of-type(3n){
     padding-right: 0;
 }
+
 .main-card-header{
     float: left;
+    position: relative;
 }
+.main-card-attach__span{
+    display: block;
+    width: 197px;
+    height: 40px;
+    position: absolute;
+    bottom: 30px;
+    padding-left: 13px;
+    background-color: rgba(0, 0, 0, 0.51);
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 0.7px;
+    line-height: 40px;
+    color: rgba(255, 255, 255, 0.79);
+    opacity: 0;
+    transition : opacity 0.4s;
+}
+.main-card-attach__img{
+    display: block;
+    width: 21px;
+    height: 20px;
+    position: absolute;
+    right: 12px;
+    bottom: 40px;
+    opacity: 0;
+    transition : opacity 0.4s;
+}
+
 .main-card-header__img{
     height: 140px;
     margin-bottom: 13px;
